--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#"><img src=""></a>
+        <a class="navbar-brand" href="images/logo.jpg"><img src=""></a>
     </div>
     <div class="collapse navbar-collapse" id="navbar-collapse-main">
         <ul class="nav navbar-nav navbar-right">
