final commit for tonight and looks great

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="THISstyle.css" rel="stylesheet" />
+    
+    <!--FontAwesome-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+
+
 </head>
 
 <body>
@@ -37,9 +42,9 @@
 
 <div id="home">
     <div class="landing-text">
-        <h1>ANGELA MONTANYE</h1>
+        <h1>Angela Montanye</h1>
         <h3>Software Engineer</h3>
-        <a href="#" class="btn btn-default btn-lg">Get Started</a>
+        <a href="#" class="btn btn-default btn-lg">Hire Ange</a>
     </div>
 </div>
 
@@ -48,7 +53,7 @@
 <div class="container">
     <div class="row">
     <div class="col-sm-6">
-        <img src="images/flowers.jpg">
+        <img src="images/pen.jpg">
     </div>
     <div class="col-sm-6 text-center">
         <h2>What's Ange Been Doing?</h2>
@@ -75,7 +80,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur ablahblah more words go here I don't know how to tab into this right now but here's the paragraph of awesome.  I sure hope I never delete my resume, that would be so terrible.  I already did that.  Save your stuff.</p>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-            <img src="images/succulents.jpg" class="img-responsive">
+            <img src="images/succulents2.jpg" class="img-responsive">
             </div>
     </div>
 </div>
@@ -87,7 +92,7 @@
         <div class="container">
             <div class="row">
             <div class="col-sm-6">
-                 <img src="images/flowers.jpg">
+                 <img src="images/nature.jpg">
             </div>
             <div class="col-sm-6">
                 <h4>Why me when there's all those other guys?</h4>
@@ -110,7 +115,7 @@
             </div>
             <div class="col-sm-4">
                 <h3>Connect</h3>
-                <a href="#" class= "fa fa-facebook"></a>
+                <a href="https://github.com/Ange406" i class= "fa fa-github fa-2x"></a>
                 <a href="#" class= "fa fa-twitter"></a>
                 <a href="#" class= "fa fa-google"></a>
                 <a href="#" class= "fa fa-linkedin"></a>
