--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link href="THISstyle.css" rel="stylesheet" />
     
     <!--FontAwesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" 
+    integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin=
+    "anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
 
 </head>
@@ -111,15 +114,14 @@
             <div class="col-sm-4">
                 <h3>Contact Ange</h3>
                 <br>
-                <h4>Here's how to reach me:</h4>
+                <h4>Where I work from:</h4>
+                <h5>Bozeman, Montana</h5>
             </div>
             <div class="col-sm-4">
                 <h3>Connect</h3>
-                <a href="https://github.com/Ange406" i class= "fa fa-github fa-2x"></a>
-                <a href="#" class= "fa fa-twitter"></a>
-                <a href="#" class= "fa fa-google"></a>
-                <a href="#" class= "fa fa-linkedin"></a>
-                <a href="#" class= "fa fa-instagram"></a>
+                <a href="tel:14062091509" target="_blank"><i class="fa fa-phone-square fa-2x"></i></a>
+                <a href="https://github.com/Ange406" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
+                <a href="www.linkedin.com/in/angela-montanye-1152a514a" target="_blank"> <i class= "fa fa-linkedin-square fa-2x"></i></a>
                 </div>
                 <div class="col-sm-4">
                     <img src="images/dream.jpg" class="icon">
