front page is looking solid, time for new pages

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="images/logo.jpg"><img src=""></a>
+
+        <!--logo to left-->
+        <!--<a class="navbar-brand"-->
+        <i class="fas fa-puzzle-piece fa-3x"></i> 
+
+
     </div>
     <div class="collapse navbar-collapse" id="navbar-collapse-main">
         <ul class="nav navbar-nav navbar-right">
@@ -59,15 +64,12 @@
 <!--JAVASCRIPT DELETE IF BROKEN-->
 
 <h1>
-        <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Ange.", "I am Creative.", "I Love Design.", "I would love to work with you." ]'>
+        <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, my name is Angela.", "I am Creative.", "I Love Design.", "I love people." ]'>
           <span class="wrap"></span>
         </a>
       </h1>
 
 <!--END OF JAVASCRIPT-->
-
-
-
 
 
 <!--Two column row-->
