--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="collapse navbar-collapse" id="navbar-collapse-main">
         <ul class="nav navbar-nav navbar-right">
         <li><a class="active" href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="secondPage.html">About</a></a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Testimonials</a></li>
         <li><a href="#">Contact</a></li>
