--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
             <div class="col-sm-4">
                 <h3>Connect</h3>
                 <a href="tel:14062091509" target="_blank"><i class="fa fa-phone-square fa-2x"></i></a>
+                <a href="mailto:angela.montanye@gmail.com" target="_blank"> <i class= "fas fa-envelope-square fa-2x"></i></a>
                 <a href="https://github.com/Ange406" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
-                <a href="www.linkedin.com/in/angela-montanye-1152a514a" target="_blank"> <i class= "fa fa-linkedin-square fa-2x"></i></a>
+                <a href="https://www.linkedin.com/in/angela-montanye-1152a514a/" target="_blank"> <i class= "fa fa-linkedin-square fa-2x"></i></a>
                 </div>
                 <div class="col-sm-4">
                     <img src="images/dream.jpg" class="icon">
