--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <ul class="nav navbar-nav navbar-right">
         <li><a class="active" href="#">Home</a></li>
         <li><a href="secondPage.html">About</a></a></li>
-        <li><a href="#">Services</a></li>
+        <li><a href="thirdPage.html">Services</a></li>
         <li><a href="#">Testimonials</a></li>
         <li><a href="#">Contact</a></li>
         </ul>
