--- a/secondPage.html
+++ b/secondPage.html
@@ -57,9 +57,6 @@
 </div>
 </nav>
 
-
-
-
                 <div class="headingText">
                     <h1>Professional Experience</h1>
                 </div>
@@ -82,10 +79,11 @@
                 <br>
                 </div>
                 <ul id="description">
-                    <ul><li>Something super cool.</li>
-                        <li>This is where I write </li>
-                        <li>about how lame my last job was but make </li>
-                        <li>it sound cool.</li>
+                    <ul><li>Created a stimulating, safe, and nurturing environment for an elementary-aged child. </li>
+                        <li>Planned and prepared daily family meals while keeping the home clean and organized.</li>
+                        <li>Gathered gear and responsibly picked child up from school daily, and took child to multiple various daily activities. </li>
+                        <li>Took care of family pets, did the family’s laundry, ran personal errands for family members, and kept the child’s bedroom organized and clean. </li>
+                        <li> I additionally taught private yoga lessons for the family.</li>
                     </p></ul>
                 
 
@@ -106,10 +104,11 @@
                 <br>
                 </div>
                 <ul id="description">
-                    <ul><li>Text here</li>
-                        <li>This is where I write </li>
-                        <li>about how lame my last job was but make </li>
-                        <li>it sound cool.</li>
+                    <ul><li>Trained, coached, and developed a team of Educators while ensuring an excellent guest experience on the retail floor. </li>
+                        <li> Oversaw and led the execution of the Inventory Team, while also helping with merchandising and community events. </li>
+                        <li>Wrote and submitted weekly store financial reports. </li>
+                        <li>Led group and individual interviews for potential hires.</li>
+                        <li> Coached Educators and played a high roll in their professional and personal development. </li>
                     </p></ul>
                     
                     <hr />
