Updated Pics/added pages 3 and 4

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <li><a class="active" href="#">Home</a></li>
         <li><a href="secondPage.html">About</a></a></li>
         <li><a href="thirdPage.html">Services</a></li>
-        <li><a href="#">Testimonials</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="fourthPage.html">Testimonials</a></li>
+        <li><a href="fifthPage.html">Contact</a></li>
         </ul>
     </div>
 </div>
@@ -77,7 +77,7 @@
 <div class="container">
     <div class="row">
     <div class="col-sm-6">
-        <img src="images/pen.jpg">
+        <img src="images/HyaliteFIVE.jpg">
     </div>
     <div class="col-sm-6 text-center">
         <h2>Who is Ange?</h2>
@@ -94,14 +94,18 @@
     <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <h4>What kinds of Projects does Ange do?</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur ablahblah more words go here I don't know how to tab into this right now but here's the paragraph of awesome.  I sure hope I never delete my resume, that would be so terrible.  I already did that.  Save your stuff.</p>
+            <p> I love helping people.  Hearing what YOU want and making that happen is what I'm all about.  From creating
+                web pages to branding, I'd love to chat with you and help you create your vision.
+            </p>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <img src="images/notebook.jpg" class="img-responsive">
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-            <h4>Here's even more cool facts</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur ablahblah more words go here I don't know how to tab into this right now but here's the paragraph of awesome.  I sure hope I never delete my resume, that would be so terrible.  I already did that.  Save your stuff.</p>
+            <h4>What are you looking for?</h4>
+                <p>Sometimes, clients don't know which direction to head or where to start.  I'm here to take that 
+                    stress off your shoulders.  I want this to be the least stressful part of your business.
+                </p>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <img src="images/succulents2.jpg" class="img-responsive">
@@ -116,13 +120,13 @@
         <div class="container">
             <div class="row">
             <div class="col-sm-6">
-                 <img src="images/nature.jpg">
+                 <img src="images/HyaliteTHREE.jpg">
             </div>
             <div class="col-sm-6">
-                <h4>A little more info about Angela</h4>
+                <h3>A little more info about Angela</h3>
                 <p>Nestled in the Big Sky Country, located in Bozeman, Montana, Ange lives with the love of her life, Josh, and their daughter, Millie Mae.  In her free time, she can be found hiking with her family, traveling to new places, camping, running, Crossfitting, or teaching and practicing yoga.
                 </p>
-                <p>Ange has aspirations of travelling to Australia, New Zealand, Indonesia and Iceland. 
+                <p>Ange has aspirations of traveling to Australia, New Zealand, Indonesia and Iceland. 
                 </p>
             </div>
             </div>
