--- a/thirdPage.html
+++ b/thirdPage.html
@@ -50,8 +50,8 @@
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="secondPage.html">About</a></a></li>
         <li><a href="thirdPage.html">Services</a></li>
-        <li><a href="#">Testimonials</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="fourthPage.html">Testimonials</a></li>
+        <li><a href="fifthPage.html">Contact</a></li>
         </ul>
     </div>
 </div>
@@ -74,14 +74,14 @@
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
         
-                    <img src="images/pinkdesk.jpg" class="img-thumbnail" alt="pink computer desk">
+                    <img src="images/HyaliteONE.jpg" class="img-thumbnail" alt="pink computer desk">
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <h4>Here's even more cool facts</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur ablahblah more words go here I don't know how to tab into this right now but here's the paragraph of awesome.  I sure hope I never delete my resume, that would be so terrible.  I already did that.  Save your stuff.</p>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <img src="images/pinksucculent.jpg" class="img-thumbnail" alt="succulent with pink background">
+                    <img src="images/pen.jpg" class="img-thumbnail" alt="succulent with pink background">
                       
 
 
