fixed resume page format

--- a/fourthPage.html
+++ b/fourthPage.html
@@ -48,7 +48,7 @@
     <div class="collapse navbar-collapse" id="navbar-collapse-main">
         <ul class="nav navbar-nav navbar-right">
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="secondPage.html">About</a></a></li>
+        <li><a href="secondPage.html">Resume</a></a></li>
         <li><a href="thirdPage.html">Services</a></li>
         <li><a href="fourthPage.html">Testimonials</a></li>
         <li><a href="fifthPage.html">Contact</a></li>
