--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="collapse navbar-collapse" id="navbar-collapse-main">
         <ul class="nav navbar-nav navbar-right">
         <li><a class="active" href="#">Home</a></li>
-        <li><a href="secondPage.html">About</a></a></li>
+        <li><a href="secondPage.html">Resume</a></a></li>
         <li><a href="thirdPage.html">Services</a></li>
         <li><a href="fourthPage.html">Testimonials</a></li>
         <li><a href="fifthPage.html">Contact</a></li>
@@ -56,7 +56,7 @@
     <div class="landing-text">
         <h1>Angela Montanye</h1>
         <h3>Software Engineer</h3>
-        <a href="#" class="btn btn-default btn-lg">Hire Ange</a>
+        <a href="mailto:angela.montanye@gmail.com" class="btn btn-default btn-lg">Hire Ange</a>
     </div>
 </div>
 
@@ -64,7 +64,7 @@
 <!--JAVASCRIPT DELETE IF BROKEN-->
 
 <h1>
-        <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, my name is Angela.", "I am Creative.", "I Love Design.", "I love people." ]'>
+        <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, my name is Angela.", "I am Creative.", "I Love Design.", "I Love People." ]'>
           <span class="wrap"></span>
         </a>
       </h1>
@@ -83,6 +83,10 @@
         <h2>Who is Ange?</h2>
         <p class="lead">Hey! Thanks for stopping by, I'm glad you're here!  I'm a Software Engineer with a passion for people and design.  I'm a dreamer, achiever, and big on goal-setting. I like making things work smoothly and I like things to look good.  Pretty simple. 
         </p>
+
+
+
+        <p class="lead2">I am a native Montanan, experienced in teaching Elementary Education, teaching yoga, serving diverse customers, working with non-profit organizations, and working in the health and wellness industry.  I love collaborating with others and coming up with unique, new and fun ideas. I'm pretty laid back and pretty easy-going. I love to meet new people, so please shoot me an email and introduce yourself! </p>
     </div>
     </div>
     </div>
@@ -124,9 +128,9 @@
             </div>
             <div class="col-sm-6">
                 <h3>A little more info about Angela</h3>
-                <p>Nestled in the Big Sky Country, located in Bozeman, Montana, Ange lives with the love of her life, Josh, and their daughter, Millie Mae.  In her free time, she can be found hiking with her family, traveling to new places, camping, running, Crossfitting, or teaching and practicing yoga.
+                <p class="bigSky">Nestled in the Big Sky Country, located in Bozeman, Montana, Ange lives with the love of her life, Josh, and their daughter, Millie Mae.  In her free time, she can be found hiking with her family, traveling to new places, camping, running, Crossfitting, or teaching and practicing yoga.
                 </p>
-                <p>Ange has aspirations of traveling to Australia, New Zealand, Indonesia and Iceland. 
+                <p class="bigSky">Ange has aspirations of traveling to Australia, New Zealand, Indonesia and Iceland. 
                 </p>
             </div>
             </div>
