--- a/thirdPage.html
+++ b/thirdPage.html
@@ -48,7 +48,7 @@
     <div class="collapse navbar-collapse" id="navbar-collapse-main">
         <ul class="nav navbar-nav navbar-right">
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="secondPage.html">About</a></a></li>
+        <li><a href="secondPage.html">Resume</a></a></li>
         <li><a href="thirdPage.html">Services</a></li>
         <li><a href="fourthPage.html">Testimonials</a></li>
         <li><a href="fifthPage.html">Contact</a></li>
@@ -70,15 +70,15 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <h4>What kinds of Projects does Ange do?</h4>
-                    <p>Lorem ipsum <mark>highlighted text</mark>dolor sit amet, consectetur ablahblah more words go here I don't know how to tab into this right now but here's the paragraph of awesome.  I sure hope I never delete my resume, that would be so terrible.  I already did that.  Save your stuff.</p>
+                    <p>I enjoy creating beautiful and engaging web pages that are user-friendly and interesting to look at. </p>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
         
                     <img src="images/HyaliteONE.jpg" class="img-thumbnail" alt="pink computer desk">
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <h4>Here's even more cool facts</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur ablahblah more words go here I don't know how to tab into this right now but here's the paragraph of awesome.  I sure hope I never delete my resume, that would be so terrible.  I already did that.  Save your stuff.</p>
+                    <h4>Who does Ange work with?</h4>
+                        <p>Well, basically, YOU! I love new challenges and meeting new people.  If you need help selling your brand via your webpage, I'm your girl.  I also have a big place in my heart for non-profits, so if that's you, send me an email -- I'd love to collaborate with you.  </p>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <img src="images/pen.jpg" class="img-thumbnail" alt="succulent with pink background">
