--- a/secondPage.html
+++ b/secondPage.html
@@ -164,7 +164,7 @@
                 </div>
 
     <p>
-            <img src="images/HyaliteONE.jpg"
+            <img src="images/notebook.jpg"
             alt="Computer Image"
             width="300"
             height="200"
