--- a/secondPage.html
+++ b/secondPage.html
@@ -66,14 +66,14 @@
                 </div>
                 
                 <div class="jobTitles">
-                <h3><b>Yoga Director/Teacher</b>
-                    <br><em> Get Reformed Pilates</em></h3>
+                <h3><b>Yoga Teacher</b>
+                    <br><em> Self Employed/Various Studios</em></h3>
                 <br>
                 </div>
                 <ul id="description">
-                    <li>Sole director and teacher in charge of the yoga program for the studio.</li>
-                    <li>Taught prenatal clients, private clients, and group classes.</li>
-                    <li>Created and formed community events with other fitness gyms in the area.</li>
+                    <li>Complete 200-Hour Yoga Teacher Training through American Power Yoga in Dallas, TX.</li>
+                    <li>Have experience teaching at multiple studios, private sessions, yoga retreats, and have experience teaching children with disabilities.</li>
+                    <li>I create individually curated classes with a large emphasis on music, and have a passion for teaching Hatha and Vinyasa.</li>
                     </p></ul>
                      
                 <div class="jobTitles">
