--- a/secondPage.html
+++ b/secondPage.html
@@ -71,7 +71,7 @@
                 <br>
                 </div>
                 <ul id="description">
-                    <li>Complete 200-Hour Yoga Teacher Training through American Power Yoga in Dallas, TX.</li>
+                    <li>Completed 200-Hour Yoga Teacher Training through American Power Yoga in Dallas, TX.</li>
                     <li>Have experience teaching at multiple studios, private sessions, yoga retreats, and have experience teaching children with disabilities.</li>
                     <li>I create individually curated classes with a large emphasis on music, and have a passion for teaching Hatha and Vinyasa.</li>
                     </p></ul>
@@ -83,7 +83,7 @@
                 </div>
                 <ul id="description">
                     <li>Trained, coached, and developed a team of Educators while ensuring an excellent guest experience on the retail floor. </li>
-                    <li> Oversaw and led the execution of the Inventory Team, while also helping with merchandising and community events. </li>
+                    <li> Led and oversaw the execution of the Inventory Team, while also helping with merchandising and community events. </li>
                     <li>Wrote and submitted weekly store financial reports. </li>
                     <li>Led group and individual interviews for potential hires.</li>
                     <li> Coached Educators and played a high roll in their professional and personal development. </li>
@@ -105,9 +105,9 @@
                 <p><b>Montana Code School, 2018-2019</b></p>
                     <p><em>Software Engineering</em></p>
                 <p><b>Hack Reactor, 2018</b></p>
-                    <p><em>Javascript Structured Study Program</em></p>
+                    <p><em>Javascript Immersive</em></p>
                 <p><b>Concordia University-Portland, 2004-2008</b></p> 
-                    <p><em>B.A. in Early Childhood/Elementary Education</em></p>
+                    <p><em>B.A. in Education</em></p>
                 <hr />  
                 </div>
 
