--- a/secondPage.html
+++ b/secondPage.html
@@ -72,7 +72,7 @@
                 </div>
                 <ul id="description">
                     <li>Completed 200-Hour Yoga Teacher Training through American Power Yoga in Dallas, TX.</li>
-                    <li>Have experience teaching at multiple studios, private sessions, yoga retreats, and have experience teaching children with disabilities.</li>
+                    <li>Experienced in teaching at multiple studios, private sessions, yoga retreats, and have taught children with disabilities.</li>
                     <li>I create individually curated classes with a large emphasis on music, and have a passion for teaching Hatha and Vinyasa.</li>
                     </p></ul>
                      
