--- a/fourthPage.html
+++ b/fourthPage.html
@@ -75,14 +75,14 @@
 
         
 
-    <!--  -->
+  
     <div class="flex-col-c-m p-l-15 p-r-15 p-t-80 p-b-90">
         <h3 class="l1-txt2 txt-center p-b-55 respon1">
             Coming Soon
         </h3>
 
-        <div>
-            <button class="how-btn-play1 flex-c-m">
+    </div>
+            <!-- <button class="how-btn-play1 flex-c-m">
                 <i class="zmdi zmdi-play"></i>
             </button>
         </div>
@@ -90,7 +90,7 @@
     
     <div class="flex-sb-m flex-w w-full">
         <!--  -->
-        <div class="flex-w flex-c-m m-t-10 m-b-10">
+        <!-- <div class="flex-w flex-c-m m-t-10 m-b-10">
             <a href="#" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-3 m-t-3">
                 <i class="fa fa-facebook"></i>
             </a>
@@ -117,22 +117,22 @@
 </div>
 
 
-
+ -->
 
 
 <!--===============================================================================================-->	
-<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+<!-- <script src="vendor/jquery/jquery-3.2.1.min.js"></script> -->
 <!--===============================================================================================-->
-<script src="vendor/bootstrap/js/popper.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+<!-- <script src="vendor/bootstrap/js/popper.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.min.js"></script> -->
 <!--===============================================================================================-->
-<script src="vendor/select2/select2.min.js"></script>
+<!-- <script src="vendor/select2/select2.min.js"></script> -->
 <!--===============================================================================================-->
-<script src="vendor/countdowntime/moment.min.js"></script>
+<!-- <script src="vendor/countdowntime/moment.min.js"></script>
 <script src="vendor/countdowntime/moment-timezone.min.js"></script>
 <script src="vendor/countdowntime/moment-timezone-with-data.min.js"></script>
-<script src="vendor/countdowntime/countdowntime.js"></script>
-<script>
+<script src="vendor/countdowntime/countdowntime.js"></script> -->
+<!-- <script>
     $('.cd100').countdown100({
         /*Set Endtime here*/
         /*Endtime must be > current time*/
@@ -146,26 +146,26 @@
         // ex:  timeZone: "America/New_York"
         //go to " http://momentjs.com/timezone/ " to get timezone
     });
-</script>
+</script> --> -->
 <!--===============================================================================================-->
-<script src="vendor/tilt/tilt.jquery.min.js"></script>
+<!-- <script src="vendor/tilt/tilt.jquery.min.js"></script>
 <script >
     $('.js-tilt').tilt({
         scale: 1.1
     })
-</script>
+</script> -->
 <!--===============================================================================================-->
-<script src="js/main.js"></script>
+<!-- <script src="js/main.js"></script> -->
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 
 gtag('config', 'UA-23581568-13');
-</script>
+</script> -->
 
 
 
