--- a/fifthPage.html
+++ b/fifthPage.html
@@ -71,7 +71,7 @@
                     Coming Soon
                 </h3>
 
-                <p class="m2-txt1 p-b-46">
+                <!-- <p class="m2-txt1 p-b-46">
                     Follow me for update!
                 </p>
 
@@ -113,7 +113,7 @@
     </div>
 </div>
 
-
+ -->
 
 
 
@@ -127,17 +127,17 @@
 <!--===============================================================================================-->
 <script src="vendor/tilt/tilt.jquery.min.js"></script>
 <!--===============================================================================================-->
-<script src="js/main.js"></script>
+<!-- <script src="js/main.js"></script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 
-gtag('config', 'UA-23581568-13');
-</script>
+gtag('config', 'UA-23581568-13'); -->
+<!-- </script> --> -->
 
 
 &copy; Angela Montanye 
